@@ -5,7 +5,7 @@ Author URI: https://ipoweruser.com/
 Description: Gautam is a text-based, clean minimal WordPress blog theme created for writers. It has a unique minimalist design, which will make your blog look good with or without featured images.
 It is fully responsive, supports custom menus and widgets, and comes with a social profile link feature. This theme uses the WordPress customizer to see the changes you have made to your blog.
 This theme is appropriate for personal and technical blogs, as well as magazine-style blogs and lifestyle websites.
-Version: 1.0.0
+Version: 1.0.1
 Tested up to: 5.7
 Requires PHP: 5.6 or higher
 License: GNU General Public License v2 or later
