@@ -1,5 +1,7 @@
 = 1.0.1 =
 * Updated: WordPress 5.7 compatibility.
+* Updated: Customizer Section Priotity Updated.
+* Added: New Site Logo configuraiton added.
 
 = 1.0.0 =
 * Initial release
